# hello-pyo3-build-config

./: Cargo.toml  README.md  build.rs  noxfile.py  pyproject.toml  sample_python_build_script.py
.github/workflows/: test.yml
src/: lib.rs
tests/: test_hello_pyo3_build_config.py
