[package]
name = "hello-pyo3-build-config"
version = "0.1.0"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "hello_pyo3_build_config"
crate-type = ["cdylib"]

[dependencies.pyo3]
git = "https://github.com/aganders3/pyo3"
branch = "export-conf"
version = "0.16.2"
features = ["extension-module"]

[build-dependencies.pyo3-build-config]
git = "https://github.com/aganders3/pyo3"
branch = "export-conf"
version = "0.16.2"
features = ["resolve-config"]
